[workspace]
members = [
    "bitcode_derive",
]

[package]
name = "bitcode"
authors = [ "Cai Bear", "Finn Bear" ]
version = "0.3.6"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SoftbearStudios/bitcode"
description = "bitcode is a bitwise binary serializer"
exclude = ["fuzz/"]

[dependencies]
bitcode_derive = { version = "0.1.3", path="./bitcode_derive", optional = true }
bytemuck = { version = "1.13", features = [ "extern_crate_alloc" ] }
serde = { version = "1.0", optional = true }
residua-zigzag = "0.1.0"

[dev-dependencies]
arrayvec = { version = "0.7.2", features = [ "serde" ] }
bincode = "1.3.3"
bitvec = { version = "1.0.1" }
flate2 = "1.0.25"
lz4_flex = "0.10.0"
paste = "1.0.12"
postcard = { version = "1.0", features = ["alloc"] }
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"
serde = { version = "1.0.159", features = [ "derive" ] }

[features]
derive = [ "bitcode_derive" ]
serde = [ "dep:serde" ]
default = [ "derive" ]

[package.metadata.docs.rs]
features = ["serde"]

[profile.bench]
lto = true
