[workspace]
members = [
    "bitcode_derive",
]

[package]
name = "bitcode"
authors = [ "Cai Bear", "Finn Bear" ]
version = "0.6.0-alpha.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SoftbearStudios/bitcode"
description = "bitcode is a bitwise binary serializer"
exclude = ["fuzz/"]

[dependencies]
arrayvec = { version = "0.7", default-features = false, optional = true }
bitcode_derive = { version = "0.6.0-alpha.1", path = "./bitcode_derive", optional = true }
bytemuck = { version = "1.14", features = [ "min_const_generics", "must_cast" ] }
glam = { version = "0.22", default-features = false, features = [ "std" ], optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
arrayvec = { version = "0.7", features = [ "serde" ] }
bincode = "1.3.3"
flate2 = "1.0.28"
lz4_flex = { version = "0.11.2", default-features = false }
paste = "1.0.14"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = [ "derive" ] }

# zstd doesn't compile with miri big-endian.
[target.'cfg(not(miri))'.dev-dependencies]
zstd = "0.13.0"

[features]
derive = [ "bitcode_derive" ]
default = [ "derive" ]

[package.metadata.docs.rs]
features = [ "derive", "serde" ]

# TODO halfs speed of benches_borrowed::bench_bitcode_decode
#[profile.bench]
#lto = true
