[package]
name = "bitcode_derive"
authors = [ "Cai Bear", "Finn Bear" ]
version = "0.6.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SoftbearStudios/bitcode/"
description = "Implementation of #[derive(Encode, Decode)] for bitcode"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.3", features = [ "extra-traits", "visit-mut" ] }
